The introduction of the modified structure in JSBML required some changes in SBMLsqueezer as well.